kubernetes/k3s-prod-a/pihole/ingress-route-dns-tcp.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole
          port: 53
